# Runner2D

./: .gitignore  CMakeLists.txt
res/shaders/: fragShader.glsl  fragShaderForText.glsl  vertShader.glsl
src/: CameraManager.cpp  CameraManager.h  Font.cpp  Font.h  OpenGLManager.cpp  OpenGLManager.h  Player.cpp  Player.h  Registrar.cpp  Registrar.h  ResourcesManager.cpp  ResourcesManager.h  ScoreInfo.cpp  ScoreInfo.h  Settings.cpp  Settings.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  TrackGenerator.cpp  TrackGenerator.h  main.cpp
